[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paradigmxyz/reth"
homepage = "https://paradigmxyz.github.io/reth"
description = "Reth CDK (Celestia Data Availability) integration layer"

[workspace]
members = [
    "crates/cdk-types",
    "crates/cdk-datastream", 
    "crates/cdk-ingest",
    "crates/cdk-finality",
    "crates/cdk-rpc-ext",
    "crates/cdk-observe",
    "crates/cdk-binaries",
    "crates/cdk-snap",
    "crates/cdk-engine-facade",
]
exclude = ["reth"]
default-members = ["crates/cdk-binaries"]
resolver = "2"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[workspace.lints.clippy]
# Enable useful clippy lints
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing-const-for-fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
result_large_err = "allow"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

# Allow these for now
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "allow"

# Speed up compilation time for dev builds
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Speed up tests
[profile.dev.package]
proptest.opt-level = 3
rand_chacha.opt-level = 3
rand_xorshift.opt-level = 3
unarray.opt-level = 3

# Release profile
[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

# Profiling profile
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

# Include debug info in benchmarks
[profile.bench]
inherits = "profiling"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
# Core dependencies
alloy-primitives = { version = "1.3.1", default-features = false, features = ["map-foldhash"] }
alloy-provider = { version = "1.0.30", features = ["reqwest"], default-features = false }
alloy-rpc-client = { version = "1.0.30", default-features = false }
alloy-transport-http = { version = "1.0.30", features = ["reqwest-rustls-tls"], default-features = false }
alloy-rpc-types = { version = "1.0.30", features = ["eth"], default-features = false }
alloy-consensus = { version = "1.0.30", default-features = false }
alloy-contract = { version = "1.0.30", default-features = false }
alloy-eips = { version = "1.0.30", default-features = false }
alloy-genesis = { version = "1.0.30", default-features = false }
alloy-json-rpc = { version = "1.0.30", default-features = false }
alloy-network = { version = "1.0.30", default-features = false }
alloy-network-primitives = { version = "1.0.30", default-features = false }
alloy-pubsub = { version = "1.0.30", default-features = false }
alloy-rpc-types-admin = { version = "1.0.30", default-features = false }
alloy-rpc-types-anvil = { version = "1.0.30", default-features = false }
alloy-rpc-types-beacon = { version = "1.0.30", default-features = false }
alloy-rpc-types-debug = { version = "1.0.30", default-features = false }
alloy-rpc-types-engine = { version = "1.0.30", default-features = false }
alloy-rpc-types-eth = { version = "1.0.30", default-features = false }
alloy-rpc-types-mev = { version = "1.0.30", default-features = false }
alloy-rpc-types-trace = { version = "1.0.30", default-features = false }
alloy-rpc-types-txpool = { version = "1.0.30", default-features = false }
alloy-serde = { version = "1.0.30", default-features = false }
alloy-signer = { version = "1.0.30", default-features = false }
alloy-signer-local = { version = "1.0.30", default-features = false }
alloy-transport = { version = "1.0.30" }
alloy-transport-ipc = { version = "1.0.30", default-features = false }
alloy-transport-ws = { version = "1.0.30", default-features = false }
alloy-sol-types = { version = "1.3.1", default-features = false }

# Serde
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Error handling
thiserror = { version = "2.0.0", default-features = false }
anyhow = "1.0"

# Async
tokio = { version = "1.44.2", default-features = false }
async-trait = "0.1.68"
futures = "0.3"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }

# HTTP
reqwest = { version = "0.12", default-features = false }
url = { version = "2.3", default-features = false }
bytes = { version = "1.5", default-features = false }

# Logging and tracing
tracing = { version = "0.1.0", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }

# Metrics
metrics = "0.24.0"
metrics-derive = "0.1"
metrics-exporter-prometheus = { version = "0.16.0", default-features = false }

# Time
chrono = "0.4.41"

# CLI
clap = "4"

# Testing
proptest = "1.7"
tokio-test = "0.4"
tempfile = "3.20"

# Compression
flate2 = "1.0"
zstd = "0.13"

# File I/O
memmap2 = "0.9"
walkdir = "2.4"

# Crypto and hashing
hex = "0.4"
sha2 = "0.10"
blake3 = "1.5"

# EVM
revm = { version = "29.0.0", default-features = false }

# Utilities
cfg-if = "1.0"
once_cell = { version = "1.19", default-features = false, features = ["critical-section"] }
