[package]
name = "cdk-binaries"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reth-cdk"
path = "src/bin/reth-cdk.rs"

[dependencies]
# CDK crates
cdk-types = { path = "../cdk-types" }
cdk-datastream = { path = "../cdk-datastream" }
cdk-ingest = { path = "../cdk-ingest" }
cdk-finality = { path = "../cdk-finality" }
cdk-observe = { path = "../cdk-observe" }

# Core dependencies
alloy-primitives = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
anyhow = { workspace = true }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Async
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "time", "signal"] }
async-trait = "0.1.68"

# HTTP client
reqwest = { workspace = true, features = ["json"] }

# Time
chrono = { workspace = true }

# Utilities
hex = "0.4"
tracing = { workspace = true }
url = "2.0"

[dev-dependencies]
tokio-test = "0.4"
