[package]
name = "cdk-finality"
version = "0.1.0"
edition = "2021"
description = "Finality oracle for CDK L1 finality checking and rollback management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paradigmxyz/reth"
homepage = "https://paradigmxyz.github.io/reth"

[dependencies]
cdk-types = { path = "../cdk-types" }
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-rpc-client = { workspace = true }
alloy-transport-http = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-network = { workspace = true }
alloy-contract = { workspace = true }
alloy-sol-macro = "1.3.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "sync"] }
tracing = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-trait = "0.1"
reqwest = { workspace = true, features = ["json"] }
hex = "0.4"

[dev-dependencies]
proptest = { workspace = true }
tokio-test = "0.4"
