[package]
name = "cdk-snap"
version = "0.1.0"
edition = "2021"
description = "CDK snapshot and index interoperability tools"
authors = ["Reth CDK Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/paradigmxyz/reth"
keywords = ["ethereum", "cdk", "snapshot", "index", "interop"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
# CDK modules
cdk-types = { path = "../cdk-types" }

# Core dependencies
alloy-primitives = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Async
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "time", "fs", "test-util"] }
async-trait = "0.1.68"

# File I/O
memmap2 = "0.9"
walkdir = "2.4"

# Compression
flate2 = "1.0"
zstd = "0.13"

# Time
chrono = { workspace = true, features = ["serde"] }

# Utilities
hex = "0.4"
sha2 = "0.10"
blake3 = "1.5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
